k8s/gke-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: isw-demo-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - isw-gke-app.az.presales.dev
    secretName: isw-gke-app.az.presales.dev-tls
  rules:
  - host: isw-gke-app.az.presales.dev
    http:
      paths:
      - backend:
          service:
            name: isw-demo-app
            port:
              number: 80
        path: /
        pathType: Prefix
